# crw-camofox

./: .gitignore  .mailmap  CHANGELOG.md  COMPATIBILITY-firecrawl.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  RELEASE.md  config.default.toml  config.docker.toml  docker-compose.yml  release-please-config.json  server.json
.github/workflows/: ci.yml  docker-build.yml  docker-publish.yml  google-indexing.yml  mcp-smoke.yml  preflight-publish.yml  release-please.yml  release.yml
bench/: run_4way.sh  run_pool_bench.sh
crates/crw-browse/: Cargo.toml
crates/crw-browse-camofox/: Cargo.toml
crates/crw-browse-camofox/src/: camofox.rs  lib.rs  main.rs  server.rs
crates/crw-browse-camofox/tests/: client_tests.rs
crates/crw-cli/: Cargo.toml
crates/crw-core/: Cargo.toml
crates/crw-crawl/: Cargo.toml
crates/crw-extract/: Cargo.toml
crates/crw-mcp/: Cargo.toml
crates/crw-mcp-proto/: Cargo.toml
crates/crw-renderer/: Cargo.toml
crates/crw-search/: Cargo.toml
crates/crw-server/: Cargo.toml
docs/: index.html  llms.txt  openapi-3.0.json  openapi.json  sitemap.xml
docs/agent-onboarding/: SKILL.md  index.html
docs/api-reference/: index.html
docs/architecture/: index.html
docs/authentication/: index.html
docs/changelog/: index.html
docs/compatibility/: index.html
docs/configuration/: index.html
docs/crates/: index.html
docs/crawling/: index.html
docs/credit-costs/: index.html
docs/docker/: index.html
docs/docs/: changelog.md  configuration.md  docker.md  installation.md  mcp.md  (+4 more)
python/: pyproject.toml
scripts/: mcp_smoke.py
(+101 files in other folders)
