[package]
name = "crw-browse-camofox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "MCP server for interactive browser automation over the camofox-browser REST API (Camoufox/Firefox)"

[dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
anyhow = "1"

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }

[[bin]]
name = "crw-browse-camofox"
path = "src/main.rs"
